web-protect/manifests/juice-shop-microgateway-config/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-juice-shop
  namespace: airlock-gateway
spec:
  infrastructure:
    parametersRef:
      group: microgateway.airlock.com
      kind: GatewayParameters
      name: gatewayparameters
  gatewayClassName: airlock-microgateway
  listeners:
  - name: http
    port: 8080
    hostname: "juice-shop-127-0-0-1.nip.io"
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
